--- a/portfolio/_includes/_header.html
+++ b/portfolio/_includes/_header.html
@@ -1,7 +1,7 @@
 <nav class="main-nav">
     <a href="index.html" class="logo">Maximilian Wagner</a>
 
-    <button id="mobile-menu-toggle" class="mobile-menu-toggle">
+    <button id="mobile-menu-toggle" class="mobile-menu-toggle" aria-label="Menü öffnen">
         <span class="hamburger-icon"></span>
     </button>
 
