--- a/portfolio/_includes/_footer.html
+++ b/portfolio/_includes/_footer.html
@@ -3,6 +3,7 @@
         <a href="https://www.linkedin.com/in/maximilian-wagner-97886b328/" target="_blank" rel="noopener">🔗 LinkedIn</a>
         <a href="https://github.com/mwagner86" target="_blank" rel="noopener">💻 GitHub</a>
         <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/259E756735BE56AFCA3B54652D00CEBF073FD917" target="_blank" rel="noopener">🔑 PGP Key</a>
+        <a href="readme.html">📄 Dokumentation</a>
     </div>
 
     <div class="footer-contact">
