--- a/portfolio/_includes/_contact-form.html
+++ b/portfolio/_includes/_contact-form.html
@@ -11,8 +11,9 @@
         <label for="subject">Betreff</label>
         <select id="subject" name="subject" required>
             <option value="" disabled selected>Bitte wählen...</option>
+            <option value="network">Netzwerken</option>
             <option value="projekt">Projektanfrage</option>
-            <option value="security">Security Audit</option>
+            <option value="security">Security Assessment</option>
             <option value="sonstiges">Sonstiges</option>
         </select>
     </div>
