--- a/portfolio/_includes/_certificates-gallery.html
+++ b/portfolio/_includes/_certificates-gallery.html
@@ -24,7 +24,7 @@
         </article>
     </div>
 
-    <a href="#" class="certificate-card-link fade-in">
+    <a href="https://www.comptia.org/certifications/security" target="_blank" class="certificate-card-link fade-in">
         <article class="certificate-card">
             <img src="images/certs/SecurityPlus.png" alt="CompTIA Security+ Badge">
             <h4>CompTIA Security+</h4>
@@ -32,7 +32,7 @@
         </article>
     </a>
 
-    <a href="#" class="certificate-card-link fade-in">
+    <a href="https://www.credly.com/badges/0c7a0488-96ea-44d3-8dd3-55adc4e6df08/linked_in_profile" target="_blank" class="certificate-card-link fade-in">
         <article class="certificate-card">
             <div class="certificate-image-stack">
                 <img src="images/certs/CCNA1.png" alt="CCNA Badge 1">
@@ -49,20 +49,6 @@
 <div class="certificate-grid">
 
     <article class="certificate-card is-roadmap fade-in">
-        <img src="images/certs/microsoft-certified-associate-badge.png" alt="Microsoft Certified Associate Badge">
-        <h4>Azure Administrator Associate</h4>
-        <p class="certificate-subtitle">Fokus auf Implementierung, Verwaltung und Überwachung von Azure-Umgebungen.</p>
-        <p>Geplant bis Ende 2025</p>
-    </article>
-
-    <article class="certificate-card is-roadmap fade-in">
-        <img src="images/certs/microsoft-certified-associate-badge.png" alt="Microsoft Certified Associate Badge">
-        <h4>Azure Security Engineer</h4>
-        <p class="certificate-subtitle">Spezialisierung auf die Absicherung von Daten, Anwendungen und Netzwerken in der Cloud.</p>
-        <p>Geplant bis Ende 2025</p>
-    </article>
-
-    <article class="certificate-card is-roadmap fade-in">
         <img src="images/certs/CCOA.png" alt="Cisco CyberOps Associate Badge">
         <h4>Cisco CyberOps Associate</h4>
         <p class="certificate-subtitle">Qualifikation für die Arbeit in Security Operations Centern (SOC), mit Fokus auf Analyse und Reaktion.</p>
@@ -70,10 +56,25 @@
     </article>
 
     <article class="certificate-card is-roadmap fade-in">
+        <img src="images/certs/ISOOfficer.png" alt="TÜV ISMS Badge">
+        <h4>TÜV ISO 27001 Officer</h4>
+        <p class="certificate-subtitle">Qualifikation zur Implementierung und Verwaltung von Informationssicherheits-Managementsystemen.</p>
+        <p>Geplant für 2026</p>
+    </article>
+
+    <article class="certificate-card is-roadmap fade-in">
+        <img src="images/certs/ISOAuditor.png" alt="TÜV Auditor Badge">
+        <h4>TÜV ISO 27001 Auditor</h4>
+        <p class="certificate-subtitle">Spezialisierung auf die Planung und Durchführung von internen und externen ISMS-Audits.</p>
+        <p>Geplant für 2027</p>
+    </article>
+
+
+    <article class="certificate-card is-roadmap fade-in">
         <img src="images/certs/OSCP-plus.png" alt="OSCP+ Badge">
         <h4>OSCP+ (Offensive Security)</h4>
         <p class="certificate-subtitle">Die Goldstandard-Zertifizierung für praxisorientiertes Penetration Testing und ethisches Hacking.</p>
-        <p>Geplant bis Ende 2026</p>
+        <p>Geplant bis Ende 2027</p>
     </article>
 
     <article class="certificate-card is-roadmap fade-in">
