--- a/portfolio/_includes/_about-content.html
+++ b/portfolio/_includes/_about-content.html
@@ -1,9 +1,15 @@
 <div class="about-layout fade-in">
     <div class="about-image">
-        <a href="images/profilbild.jpg" data-fslightbox="profile-gallery" title="Maximilian Wagner">
-            <img src="images/profilbild.jpg" alt="Profile picture of Maximilian">
+        <a href="images/profilbild-800.webp" data-fslightbox="profile-gallery" title="Maximilian Wagner">
+            <img src="images/profilbild-800.webp"
+                 srcset="images/profilbild-400.webp 400w,
+                     images/profilbild-800.webp 800w"
+                 sizes="(max-width: 768px) 100vw, 400px"
+                 alt="Maximilian Wagner - InfoSec Professional"
+                 loading="lazy">
         </a>
-    </div> <div class="about-text">
+    </div>
+    <div class="about-text">
     <div class="content-block">
         <p>
             Hallo, ich bin Maximilian.<br><br>
