--- a/portfolio/_includes/_terminal.html
+++ b/portfolio/_includes/_terminal.html
@@ -13,7 +13,7 @@
             <div class="terminal-line">Type 'help' to see available commands.</div>
         </div>
         <div class="terminal-input-line">
-            <span class="terminal-prompt">mwagner86@portfolio:~$</span>
+            <label for="terminal-input" class="terminal-prompt">mwagner86@portfolio:~$</label>
             <input type="text" id="terminal-input" autofocus spellcheck="false" autocomplete="off">
         </div>
     </div>
