--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,17 +1,19 @@
-/* **************************************************************/
-/* */
-/* __  __    __        __                                       */
-/* |  \/  |   \ \      / /_ _  __ _ _ __   ___ _ __             */
-/* | |\/| |    \ \ /\ / / _` |/ _` | '_ \ / _ \ '__|            */
-/* | |  | |_    \ V  V / (_| | (_| | | | |  __/ |               */
-/* |_|  |_(_)    \_/\_/ \__,_|\__, |_| |_|\___|_|               */
-/* */
-/* Projekt: Portfolio Webseite                                  */
-/* Datei: style.css                                             */
-/* Autor: Maximilian Wagner                                     */
-/* Erstelldatum: 04.01.2026                                     */
-/* */
-/* ************************************************************ */
+/* ***************************************************************/
+/*                                                               */
+/* __  __    __        __                                        */
+/* |  \/  |   \ \      / /_ _  __ _ _ __   ___ _ __              */
+/* | |\/| |    \ \ /\ / / _` |/ _` | '_ \ / _ \ '__|             */
+/* | |  | |_    \ V  V / (_| | (_| | | | |  __/ |                */
+/* |_|  |_(_)    \_/\_/ \__,_|\__, |_| |_|\___|_|                */
+/*                                                               */
+/* Projekt: Portfolio Webseite                                   */
+/* Datei: style.css                                              */
+/* Autor: Maximilian Wagner                                      */
+/* Erstelldatum: 04.01.2026                                      */
+/* AI-Disclosure: CSS styling supported by Google Gemini 1.5 Pro.*/
+/* Color scheme and general layout are original works by         */
+/* Maximilian Wagner.                                            */
+/* ***************************************************************/
 
 /* ========================================================================== */
 /* 1. LOKALE SCHRIFTARTEN (DSGVO-KONFORM)                                     */
