detail page added and impressum fixed

--- a/portfolio/_includes/_projects-gallery.html
+++ b/portfolio/_includes/_projects-gallery.html
@@ -5,11 +5,7 @@
             <h3>Transcendence</h3>
             <p class="project-description">Ein Full-Stack-Projekt: Echtzeit-Multiplayer-Pong mit Chat, OAuth2-Authentifizierung und Monitoring über einen containerisierten ELK Stack.</p>
             <ul class="tech-stack">
-                <li>Django</li>
-                <li>JavaScript</li>
-                <li>Docker</li>
-                <li>PostgreSQL</li>
-                <li>ELK Stack</li>
+                <li>Django</li><li>JavaScript</li><li>Docker</li><li>PostgreSQL</li><li>ELK Stack</li>
             </ul>
         </article>
     </a>
@@ -19,12 +15,7 @@
             <h3>Inception</h3>
             <p class="project-description">Ein komplettes, containerisiertes Web-Stack-Projekt mit Docker Compose. Es umfasst Nginx, eine WordPress-Seite mit MariaDB-Datenbank und Redis-Caching.</p>
             <ul class="tech-stack">
-                <li>Docker</li>
-                <li>Docker Compose</li>
-                <li>Nginx</li>
-                <li>WordPress</li>
-                <li>MariaDB</li>
-                <li>Redis</li>
+                <li>Docker</li><li>Docker Compose</li><li>Nginx</li><li>WordPress</li><li>MariaDB</li><li>Redis</li>
             </ul>
         </article>
     </a>
@@ -34,25 +25,24 @@
             <h3>C++ Webserver</h3>
             <p class="project-description">Ein von Grund auf in C++98 implementierter, non-blocking HTTP/1.1 Webserver. Verarbeitet parallele Anfragen und nutzt eine NGINX-ähnliche Konfigurationsdatei.</p>
             <ul class="tech-stack">
-                <li>C++</li>
-                <li>HTTP/1.1</li>
-                <li>Socket-Programmierung</li>
-                <li>System-Programmierung</li>
+                <li>C++</li><li>HTTP/1.1</li><li>Socket-Programmierung</li><li>System-Programmierung</li>
             </ul>
         </article>
     </a>
 
-    <a href="https://github.com/mwagner86/cub3d" target="_blank" class="project-card-link fade-in">
-        <article class="project-card">
+    <article class="project-card highlight fade-in" style="position: relative;">
+        <a href="https://github.com/mwagner86/cub3d" target="_blank" class="stretched-link" aria-label="GitHub Projekt Cub3D"></a>
+
+        <div class="project-content">
             <h3>Cub3D</h3>
-            <p class="project-description">Eine 3D-Spiele-Engine, die mit Raycasting in reinem C implementiert wurde. Inspiriert vom Klassiker Wolfenstein 3D, rendert sie eine 2D-Karte in eine pseudo-3D-Perspektive.</p>
+            <p class="project-description">
+                Eine 3D-Spiele-Engine, die mit Raycasting in reinem C implementiert wurde. Inspiriert vom Klassiker Wolfenstein 3D, rendert sie eine 2D-Karte in eine pseudo-3D-Perspektive.
+            </p>
             <ul class="tech-stack">
-                <li>C</li>
-                <li>Grafik-Programmierung</li>
-                <li>Raycasting</li>
-                <li>MiniLibX</li>
+                <li>C</li><li>Grafik-Programmierung</li><li>Raycasting</li><li>MiniLibX</li>
             </ul>
-        </article>
-    </a>
+            <a href="projects/cub3d.html" class="button btn-detail" style="margin-top: 1.5rem; width: 100%; text-align: center; position: relative; z-index: 2;">Projekt-Details</a>
+        </div>
+    </article>
 
 </div>
