--- a/portfolio/_includes/_footer.html
+++ b/portfolio/_includes/_footer.html
@@ -12,6 +12,6 @@
     </div>
 
     <div class="footer-bottom">
-        <p>&copy; 2026 Maximilian Wagner | 🛡️ Privacy: No Tracking / No Indexing active</p>
+        <p>&copy; <span id="current-year">2026</span> Maximilian Wagner | 🛡️ Privacy: No Tracking / No Indexing active</p>
     </div>
 </div>
